<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FIXBR</string>
    <string name="optimize_btn">Optimize</string>
    <string name="restore_btn">Restore</string>
    <string name="status_optimized">Optimization Active</string>
    <string name="status_default">Not Optimized</string>
    <string name="package_hint">Enter game package name</string>
    <string name="root_denied">Root access denied!</string>
    <string name="root_granted">Root access granted</string>
    <string name="applying">Applying tweaks...</string>
    <string name="restoring">Restoring settings...</string>
    <string name="optimization_desc">BR Game Optimizer</string>
</resources>
